@@ -3,6 +3,7 @@ from numpy.distutils.scons import GetNumpyEnvironment
 from numpy.distutils.scons.checkers.perflib import \
         CheckATLAS, CheckAccelerate, CheckMKL, CheckSunperf
 from numpy.distutils.scons.checkers.custom_checkers import CheckCBLAS, CheckLAPACK
+from numpy.distutils.scons import CheckF77Mangling
 
 env = GetNumpyEnvironment(ARGUMENTS)
 
@@ -19,6 +20,7 @@ config = env.NumpyConfigure(custom_tests =
     'CheckAccelerate' : CheckAccelerate,
     'CheckCBLAS' : CheckCBLAS,
     'CheckLAPACK' : CheckLAPACK,
+    'CheckF77Mangling' : CheckF77Mangling,
     'CheckSunperf' : CheckSunperf})
 
 do_check = 1
@@ -29,6 +31,7 @@ if do_check:
     st, opts = config.CheckSunperf(autoadd = 0)
     st = config.CheckCBLAS(autoadd = 0)
     st = config.CheckLAPACK(autoadd = 0)
+    st = config.CheckF77Mangling()
 
     if env.has_key('LIBS'):
         print "LIBS of env is %s" % env.Dump('LIBS')
